# evolution-etesync

./: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README.md  config.h.in  evolution-etesync.doap  org.gnome.Evolution-etesync.metainfo.xml.in
po/: CMakeLists.txt  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  it.po  ka.po  kk.po  lt.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: CMakeLists.txt
src/addressbook/: CMakeLists.txt  e-book-backend-etesync-factory.c  e-book-backend-etesync.c  e-book-backend-etesync.h
src/calendar/: CMakeLists.txt  e-cal-backend-etesync-factory.c  e-cal-backend-etesync.c  e-cal-backend-etesync.h
src/common/: CMakeLists.txt  e-etesync-connection.c  e-etesync-connection.h  e-etesync-defines.h  e-etesync-service.c  e-etesync-utils.c  e-etesync-utils.h  e-source-etesync-account.c  e-source-etesync-account.h  e-source-etesync.c  e-source-etesync.h
src/credentials/: CMakeLists.txt  e-credentials-prompter-impl-etesync.c  e-credentials-prompter-impl-etesync.h  e-etesync-service.c  e-etesync-service.h  e-source-credentials-provider-impl-etesync.c  e-source-credentials-provider-impl-etesync.h  module-etesync-credentials.c
src/evolution/: CMakeLists.txt  e-book-config-etesync.c  e-book-config-etesync.h  e-cal-config-etesync.c  e-cal-config-etesync.h  e-etesync-config-lookup.c  e-etesync-config-lookup.h  module-etesync-configuration.c
src/registry/: CMakeLists.txt  e-etesync-backend-factory.c  e-etesync-backend-factory.h  e-etesync-backend.c  e-etesync-backend.h  module-etesync-backend.c
